# recombass

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
bioconda-recipe/: README.md  meta.yaml
recombass/: __init__.py  cli.py  inputprep.py  maffilter.py  nr.py  pmrcal.py  pre.py  wtdenoise.py
tests/: test_cli.py
tests/data/: toy_snps.tsv
