[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recombass"
version = "0.1.6"
description = "Detect recombination hot/cold spots from SNP matrices using wavelet denoising"
readme = "README.md"
authors = [{name = "Hao Huang", email = "huanghao@simm.ac.cn"}]
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["bioinformatics", "genomics", "recombination", "microbiology", "snp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "polars",
    "PyWavelets<1.9.0",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "click",
    "pyarrow"
]

[project.urls]
Homepage = "https://pypi.org/project/recombass/"

[project.scripts]
recombass = "recombass.cli:main"

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools.packages.find]
include = ["recombass*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
